(chores) camel-aws2-ddb: prefer unmutable lists when possible